@@ -24,7 +24,9 @@ package org.biojava.nbio.structure.align;
 
 import org.biojava.nbio.structure.StructureTools;
 
-/** A class that contains all the parameters of the structure alignment algorithm.
+/**
+ * A class that contains all the parameters of the structure alignment
+ * algorithm.
  *
  * @author Andreas Prlic
  * @since 1.5
@@ -32,9 +34,8 @@ import org.biojava.nbio.structure.StructureTools;
  */
 public class StrucAligParameters {
 
-
 	int initialK;
-	String[] usedAtomNames = { StructureTools.CA_ATOM_NAME, } ;
+	String[] usedAtomNames = { StructureTools.CA_ATOM_NAME, };
 
 	// step 1
 
@@ -48,36 +49,36 @@ public class StrucAligParameters {
 
 	// step 2
 	float fragmentMiniDistance;
-	float fragCompat;   // fragment compatibility cutoff
-	int maxrefine;      // max number of JointFragments to be refined
+	float fragCompat; // fragment compatibility cutoff
+	int maxrefine; // max number of JointFragments to be refined
 
 	boolean joinPlo; // joining according to BioPython variant
 	boolean joinFast; // apply a fast procedure for extending the alignments
 
 	// joininf of fragments - checks
-	boolean doAngleCheck  ;
+	boolean doAngleCheck;
 	boolean doDistanceCheck;
 	boolean doDensityCheck;
 	boolean doRMSCheck;
 	float densityCutoff;
 
-	int angleDiff;      // directional difference
+	int angleDiff; // directional difference
 	double joinRMSCutoff; // rms cutoff to be applied during joining of fragments.
 
 	// step 4
-	float create_co; //  alignment generation cutoff
-	int maxIter; //  # max number of iterations in refinement
+	float create_co; // alignment generation cutoff
+	int maxIter; // # max number of iterations in refinement
 	float gapOpen;// gap open penalty
 	float gapExtension; // gap extensionpenalty
-	int permutationSize; // minimal size for a permutated fragment ( -1 means no circular permutation search)
-	float evalCutoff; //  alignment evaluation cutoff
+	int permutationSize; // minimal size for a permutated fragment ( -1 means no circular permutation
+							// search)
+	float evalCutoff; // alignment evaluation cutoff
 
 	public StrucAligParameters() {
-		super();
 		setDefault();
 	}
 
-	public static StrucAligParameters getDefaultParameters(){
+	public static StrucAligParameters getDefaultParameters() {
 		StrucAligParameters n = new StrucAligParameters();
 		return n;
 	}
@@ -86,71 +87,71 @@ public class StrucAligParameters {
 		initialK = 6;
 
 		// step 1
-		seedFragmentLength      = 8;
-		seedRmsdCutoff          = 3.0f; // orig 2.0 - better?
-		fragmentLength          = 10;
-		diagonalDistance        = 3;
-		diagonalDistance2       = 9; // this helps a lot in 1buz vs 1aua
-		fragmentMiniDistance    = 3.5f; // orig 2
-		angleDiff               = 10;
-		fragCompat              = 6.0f; // orig 4.0
-		maxrefine               = 20; // orig 20
+		seedFragmentLength = 8;
+		seedRmsdCutoff = 3.0f; // orig 2.0 - better?
+		fragmentLength = 10;
+		diagonalDistance = 3;
+		diagonalDistance2 = 9; // this helps a lot in 1buz vs 1aua
+		fragmentMiniDistance = 3.5f; // orig 2
+		angleDiff = 10;
+		fragCompat = 6.0f; // orig 4.0
+		maxrefine = 20; // orig 20
 
 		// step 2
-		reduceInitialFragments  =  true; // if this is disabled, you might want to also disable doRMSCheck for large structures...
-		joinRMSCutoff           = 5.0; // orig 4
-		joinPlo                 = false;
-		joinFast                = false;
-
+		reduceInitialFragments = true; // if this is disabled, you might want to also disable doRMSCheck for large
+										// structures...
+		joinRMSCutoff = 5.0; // orig 4
+		joinPlo = false;
+		joinFast = false;
 
 		// 3 joint fragments
-		doAngleCheck            = true;
-		doDistanceCheck         = true;
-		doRMSCheck              = true;
+		doAngleCheck = true;
+		doDistanceCheck = true;
+		doRMSCheck = true;
 
-		doDensityCheck          = false; // hm this one needs improvements before being used
-		densityCutoff           = 7.0f;
+		doDensityCheck = false; // hm this one needs improvements before being used
+		densityCutoff = 7.0f;
 
-		//  step 3
-		create_co           = 6.0f;
-		maxIter             = 4;  // number of times dynamic programming is run. set to zero for quick search (but imprecise)
-		gapOpen             = 20.0f;
-		gapExtension        = 0.0f;
-		permutationSize     = 20;
-		evalCutoff          = 6.0f;
+		// step 3
+		create_co = 6.0f;
+		maxIter = 4; // number of times dynamic programming is run. set to zero for quick search (but
+						// imprecise)
+		gapOpen = 20.0f;
+		gapExtension = 0.0f;
+		permutationSize = 20;
+		evalCutoff = 6.0f;
 	}
+
 	@Override
 	public String toString() {
-		StringBuffer buf = new StringBuffer();
+		StringBuilder buf = new StringBuilder();
 		String t = " ";
 
-		Object[] params = new Object[]{new Integer(initialK) ,new Integer(seedFragmentLength),
-				new Float(seedRmsdCutoff),
-				new Integer(fragmentLength),
-				new Integer(diagonalDistance), new Integer(diagonalDistance2), new Float(fragmentMiniDistance),
-				new Integer(angleDiff),
-				new Float(fragCompat), new Integer(maxrefine),
-				new Boolean(reduceInitialFragments), new Double(joinRMSCutoff), new Boolean(joinPlo),
-				new Boolean(doAngleCheck), new Boolean(doDistanceCheck), new Boolean(doRMSCheck),
-				new Boolean(doDensityCheck), new Float(densityCutoff), new Float(create_co), new Integer(maxIter),
-				new Float(gapOpen), new Float(gapExtension), new Integer(permutationSize), new Float(evalCutoff)};
+		Object[] params = new Object[] { Integer.valueOf(initialK), Integer.valueOf(seedFragmentLength),
+				Float.valueOf(seedRmsdCutoff), Integer.valueOf(fragmentLength), Integer.valueOf(diagonalDistance),
+				Integer.valueOf(diagonalDistance2), Float.valueOf(fragmentMiniDistance), Integer.valueOf(angleDiff),
+				Float.valueOf(fragCompat), Integer.valueOf(maxrefine), Boolean.valueOf(reduceInitialFragments),
+				Double.valueOf(joinRMSCutoff), Boolean.valueOf(joinPlo), Boolean.valueOf(doAngleCheck),
+				Boolean.valueOf(doDistanceCheck), Boolean.valueOf(doRMSCheck), Boolean.valueOf(doDensityCheck),
+				Float.valueOf(densityCutoff), Float.valueOf(create_co), Integer.valueOf(maxIter),
+				Float.valueOf(gapOpen), Float.valueOf(gapExtension), Integer.valueOf(permutationSize),
+				Float.valueOf(evalCutoff) };
 
-		for (int i=0 ; i< params.length ; i++){
-			buf.append(params[i]);
+		for (Object param : params) {
+			buf.append(param);
 			buf.append(t);
 		}
-
 
 		return buf.toString();
 
 	}
 
-	public static StrucAligParameters getDBSearchParameters(){
+	public static StrucAligParameters getDBSearchParameters() {
 		StrucAligParameters params = new StrucAligParameters();
 
 		params.setMaxIter(0); // not so nice alignments, but significant similarities should already be found,
-		// one could do a second interation later over the top ranking hits and make a nicer alignment.
-
+		// one could do a second interation later over the top ranking hits and make a
+		// nicer alignment.
 
 		return params;
 	}
@@ -175,12 +176,12 @@ public class StrucAligParameters {
 		return seedFragmentLength;
 	}
 
-	public boolean isJoinFast(){
-	   return joinFast;
+	public boolean isJoinFast() {
+		return joinFast;
 	}
 
-	public void setJoinFast(boolean fastJoin){
-	   joinFast = fastJoin;
+	public void setJoinFast(boolean fastJoin) {
+		joinFast = fastJoin;
 	}
 
 	public boolean isJoinPlo() {
@@ -195,19 +196,13 @@ public class StrucAligParameters {
 		this.seedFragmentLength = seedFragmentLength;
 	}
 
-
-
 	public float getSeedRmsdCutoff() {
 		return seedRmsdCutoff;
 	}
 
-
-
 	public void setSeedRmsdCutoff(float seedRmsdCutoff) {
 		this.seedRmsdCutoff = seedRmsdCutoff;
 	}
-
-
 
 	public boolean isDoAngleCheck() {
 		return doAngleCheck;
@@ -245,13 +240,9 @@ public class StrucAligParameters {
 		return joinRMSCutoff;
 	}
 
-
-
 	public void setJoinRMSCutoff(double joinRMSCutoff) {
 		this.joinRMSCutoff = joinRMSCutoff;
 	}
-
-
 
 	public float getEvalCutoff() {
 		return evalCutoff;
@@ -260,9 +251,6 @@ public class StrucAligParameters {
 	public void setEvalCutoff(float evalCutoff) {
 		this.evalCutoff = evalCutoff;
 	}
-
-
-
 
 	public int getPermutationSize() {
 		return permutationSize;
@@ -304,9 +292,10 @@ public class StrucAligParameters {
 		this.create_co = create_co;
 	}
 
-	/** if this is set to false, the time spent to joint the initial fragments (step 2)
-	 * is increased. - particular for large structures this increases calc. time a lot.
-	 * advantage: more combinations of fragments are used.
+	/**
+	 * if this is set to false, the time spent to joint the initial fragments (step
+	 * 2) is increased. - particular for large structures this increases calc. time
+	 * a lot. advantage: more combinations of fragments are used.
 	 *
 	 * @return a flag if the inital fragments should be reduced
 	 */
@@ -366,8 +355,6 @@ public class StrucAligParameters {
 		this.diagonalDistance = diagonalDistance;
 	}
 
-
-
 	public int getDiagonalDistance2() {
 		return diagonalDistance2;
 	}
@@ -383,8 +370,5 @@ public class StrucAligParameters {
 	public void setFragmentMiniDistance(float fragmentMiniDistance) {
 		this.fragmentMiniDistance = fragmentMiniDistance;
 	}
-
-
-
 
 }
