@@ -49,8 +49,8 @@ import org.xml.sax.InputSource;
 import org.xml.sax.SAXException;
 
 /**
- * Parse an XML file representing a {@link MultipleAlignmentEnsemble}, so
- * that the original alignment can be recovered.
+ * Parse an XML file representing a {@link MultipleAlignmentEnsemble}, so that
+ * the original alignment can be recovered.
  * <p>
  * Atoms need to be downloaded, either manually or using the method
  * getAtomArrays() in MultipleAlignmentEnsemble.
@@ -62,10 +62,10 @@ import org.xml.sax.SAXException;
 public class MultipleAlignmentXMLParser {
 
 	/**
-	 * Creates a list of MultipleAlignment ensembles from an XML file.
-	 * This recovers only the information that was previously stored.
-	 * If the Atoms are needed, the method getAtomArrays() will automatically
-	 * download the structures from the stored structure identifiers.
+	 * Creates a list of MultipleAlignment ensembles from an XML file. This recovers
+	 * only the information that was previously stored. If the Atoms are needed, the
+	 * method getAtomArrays() will automatically download the structures from the
+	 * stored structure identifiers.
 	 *
 	 * @param xml String XML file containing any number of ensembles
 	 * @return List of ensembles in the file
@@ -76,10 +76,9 @@ public class MultipleAlignmentXMLParser {
 	public static List<MultipleAlignmentEnsemble> parseXMLfile(String xml)
 			throws ParserConfigurationException, SAXException, IOException {
 
-		List<MultipleAlignmentEnsemble> ensembles =
-				new ArrayList<MultipleAlignmentEnsemble>();
+		List<MultipleAlignmentEnsemble> ensembles = new ArrayList<>();
 
-		//Convert string to XML document
+		// Convert string to XML document
 		DocumentBuilderFactory factory = DocumentBuilderFactory.newInstance();
 		DocumentBuilder db = factory.newDocumentBuilder();
 		InputSource inStream = new InputSource();
@@ -87,12 +86,11 @@ public class MultipleAlignmentXMLParser {
 		Document doc = db.parse(inStream);
 		doc.getDocumentElement().normalize();
 
-		//In case there are more than one ensemble in the document (generalize)
-		NodeList listOfEnsembles =
-				doc.getElementsByTagName("MultipleAlignmentEnsemble");
+		// In case there are more than one ensemble in the document (generalize)
+		NodeList listOfEnsembles = doc.getElementsByTagName("MultipleAlignmentEnsemble");
 
-		//Explore all the ensembles, if multiple ones
-		for (int e=0; e<listOfEnsembles.getLength(); e++) {
+		// Explore all the ensembles, if multiple ones
+		for (int e = 0; e < listOfEnsembles.getLength(); e++) {
 
 			Node root = listOfEnsembles.item(e);
 			MultipleAlignmentEnsemble ensemble = parseEnsemble(root);
@@ -101,25 +99,22 @@ public class MultipleAlignmentXMLParser {
 		return ensembles;
 	}
 
-	public static MultipleAlignmentEnsemble parseEnsemble(Node root){
+	public static MultipleAlignmentEnsemble parseEnsemble(Node root) {
 
-		MultipleAlignmentEnsemble ensemble =
-				new MultipleAlignmentEnsembleImpl();
+		MultipleAlignmentEnsemble ensemble = new MultipleAlignmentEnsembleImpl();
 
 		parseHeader(root, ensemble);
 
 		NodeList children = root.getChildNodes();
 
-		for (int i=0; i<children.getLength(); i++) {
+		for (int i = 0; i < children.getLength(); i++) {
 
 			Node child = children.item(i);
-			if (child.getNodeName().equals("MultipleAlignment")){
+			if ("MultipleAlignment".equals(child.getNodeName())) {
 				parseMultipleAlignment(child, ensemble);
-			}
-			else if (child.getNodeName().equals("Structures")){
+			} else if ("Structures".equals(child.getNodeName())) {
 				parseStructures(child, ensemble);
-			}
-			else if (child.getNodeName().equals("ScoresCache")){
+			} else if ("ScoresCache".equals(child.getNodeName())) {
 				parseScoresCache(child, ensemble);
 			}
 		}
@@ -127,20 +122,18 @@ public class MultipleAlignmentXMLParser {
 		return ensemble;
 	}
 
-	public static MultipleAlignment parseMultipleAlignment(Node root,
-			MultipleAlignmentEnsemble ensemble) {
+	public static MultipleAlignment parseMultipleAlignment(Node root, MultipleAlignmentEnsemble ensemble) {
 
 		MultipleAlignment msa = new MultipleAlignmentImpl(ensemble);
 		NodeList children = root.getChildNodes();
 
-		for (int i=0; i<children.getLength(); i++) {
+		for (int i = 0; i < children.getLength(); i++) {
 
 			Node child = children.item(i);
 
-			if (child.getNodeName().equals("BlockSet")){
+			if ("BlockSet".equals(child.getNodeName())) {
 				parseBlockSet(child, msa);
-			}
-			else if (child.getNodeName().equals("ScoresCache")){
+			} else if ("ScoresCache".equals(child.getNodeName())) {
 				parseScoresCache(child, msa);
 			}
 		}
@@ -150,26 +143,24 @@ public class MultipleAlignmentXMLParser {
 	public static BlockSet parseBlockSet(Node root, MultipleAlignment msa) {
 
 		BlockSet bs = new BlockSetImpl(msa);
-		List<Matrix4d> transforms = new ArrayList<Matrix4d>();
+		List<Matrix4d> transforms = new ArrayList<>();
 		NodeList children = root.getChildNodes();
 
-		for (int i=0; i<children.getLength(); i++) {
+		for (int i = 0; i < children.getLength(); i++) {
 
 			Node child = children.item(i);
 
-			if (child.getNodeName().equals("Block")){
+			if ("Block".equals(child.getNodeName())) {
 				parseBlock(child, bs);
-			}
-			else if (child.getNodeName().equals("Matrix4d")){
+			} else if ("Matrix4d".equals(child.getNodeName())) {
 				Matrix4d t = parseMatrix4d(child);
 				transforms.add(t);
-			}
-			else if (child.getNodeName().equals("ScoresCache")){
+			} else if ("ScoresCache".equals(child.getNodeName())) {
 				parseScoresCache(child, bs);
 			}
 		}
-		//Because if it is 0 means that there were no transformations
-		if (transforms.size() != 0){
+		// Because if it is 0 means that there were no transformations
+		if (transforms.size() != 0) {
 			bs.setTransformations(transforms);
 		}
 		return bs;
@@ -178,38 +169,37 @@ public class MultipleAlignmentXMLParser {
 	public static Block parseBlock(Node root, BlockSet blockSet) {
 
 		Block b = new BlockImpl(blockSet);
-		List<List<Integer>> alignRes = new ArrayList<List<Integer>>();
+		List<List<Integer>> alignRes = new ArrayList<>();
 		b.setAlignRes(alignRes);
 		NodeList children = root.getChildNodes();
 
-		for(int i=0; i<children.getLength(); i++) {
+		for (int i = 0; i < children.getLength(); i++) {
 
 			Node child = children.item(i);
-			if (child.getNodeName().contains("eqr")){
+			if (child.getNodeName().contains("eqr")) {
 
 				NamedNodeMap atts = child.getAttributes();
 
 				int str = 1;
-				Node node = atts.getNamedItem("str"+str);
+				Node node = atts.getNamedItem("str" + str);
 
-				while (node!=null){
+				while (node != null) {
 
 					if (alignRes.size() < str) {
 						alignRes.add(new ArrayList<Integer>());
 					}
 
 					String residue = node.getTextContent();
-					if (residue.equals("null")){
-						alignRes.get(str-1).add(null);
+					if ("null".equals(residue)) {
+						alignRes.get(str - 1).add(null);
 					} else {
-						alignRes.get(str-1).add(new Integer(residue));
+						alignRes.get(str - 1).add(Integer.valueOf(residue));
 					}
 
 					str++;
-					node = atts.getNamedItem("str"+str);
+					node = atts.getNamedItem("str" + str);
 				}
-			}
-			else if (child.getNodeName().equals("ScoresCache")){
+			} else if ("ScoresCache".equals(child.getNodeName())) {
 				parseScoresCache(child, b);
 			}
 		}
@@ -221,11 +211,11 @@ public class MultipleAlignmentXMLParser {
 		Matrix4d m = new Matrix4d();
 		NamedNodeMap atts = node.getAttributes();
 
-		for (int x=0; x<4; x++){
-			for (int y=0; y<4; y++){
-				String key = "mat"+(x+1)+(y+1);
+		for (int x = 0; x < 4; x++) {
+			for (int y = 0; y < 4; y++) {
+				String key = new StringBuilder().append("mat").append(x + 1).append(y + 1).toString();
 				String value = atts.getNamedItem(key).getTextContent();
-				m.setElement(x, y, new Double(value));
+				m.setElement(x, y, Double.valueOf(value));
 			}
 		}
 		return m;
@@ -235,62 +225,60 @@ public class MultipleAlignmentXMLParser {
 
 		NodeList children = root.getChildNodes();
 
-		for (int i=0; i<children.getLength(); i++) {
+		for (int i = 0; i < children.getLength(); i++) {
 
 			Node child = children.item(i);
 			NamedNodeMap atts = child.getAttributes();
 			if (atts != null) {
 				Node score = atts.getNamedItem("value");
-				Double value = new Double(score.getTextContent());
+				Double value = Double.valueOf(score.getTextContent());
 				cache.putScore(child.getNodeName(), value);
 			}
 		}
 	}
 
-	public static void parseHeader(Node node,
-			MultipleAlignmentEnsemble ensemble) {
+	public static void parseHeader(Node node, MultipleAlignmentEnsemble ensemble) {
 
 		NamedNodeMap atts = node.getAttributes();
 
 		String algo = atts.getNamedItem("Algorithm").getTextContent();
-		if (!algo.equals("null")){
+		if (!"null".equals(algo)) {
 			ensemble.setAlgorithmName(algo);
 		}
 
 		String version = atts.getNamedItem("Version").getTextContent();
-		if (!version.equals("null")){
+		if (!"null".equals(version)) {
 			ensemble.setVersion(version);
 		}
 
 		String ioTime = atts.getNamedItem("IOTime").getTextContent();
-		if (!ioTime.equals("null")){
-			ensemble.setIoTime(new Long(ioTime));
+		if (!"null".equals(ioTime)) {
+			ensemble.setIoTime(Long.valueOf(ioTime));
 		}
 
 		String time = atts.getNamedItem("CalculationTime").getTextContent();
-		if (!time.equals("null")){
-			ensemble.setCalculationTime(new Long(time));
+		if (!"null".equals(time)) {
+			ensemble.setCalculationTime(Long.valueOf(time));
 		}
 	}
 
-	public static void parseStructures(Node root,
-			MultipleAlignmentEnsemble ensemble) {
+	public static void parseStructures(Node root, MultipleAlignmentEnsemble ensemble) {
 
-		List<StructureIdentifier> names = new ArrayList<StructureIdentifier>();
+		List<StructureIdentifier> names = new ArrayList<>();
 		ensemble.setStructureIdentifiers(names);
 
 		NamedNodeMap atts = root.getAttributes();
 
 		int str = 1;
-		Node node = atts.getNamedItem("name"+str);
+		Node node = atts.getNamedItem("name" + str);
 
-		while (node!=null){
+		while (node != null) {
 
 			String name = node.getTextContent();
 			names.add(new StructureName(name));
 
 			str++;
-			node = atts.getNamedItem("name"+str);
+			node = atts.getNamedItem("name" + str);
 		}
 	}
 
